--- a/src/app/components/home/mostpopactivities/mostpopactivities.component.html
+++ b/src/app/components/home/mostpopactivities/mostpopactivities.component.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-4 col-lg-3" *ngFor="let activity of activities">
 
-        <div class="card m-3">
+        <div class="card m-3 pointer" (click)="goToActivity(activity.id)">
           <img class="card-img-top" [src]="activity.image" alt="Card image cap">
           <div class="card-body">
             <h5 class="card-title">{{activity.name}}</h5>
