--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~font-awesome/css/font-awesome.css";
+@import url('https://fonts.googleapis.com/css?family=Hind');
 
+body{
+    font-family: 'Hind';
+}
+
+.pointer{
+    cursor: pointer;
+}
